// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with theme and passed props and with back button 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #dfe7ed;
  padding: 10px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 1.2em;
  font-weight: normal;
  color: #4b5c6b;
}

.c2 {
  background: 0;
  border: 0;
  padding: 0;
  border: 3px solid #c7d2db;
  border-radius: 100px;
}

.c2:focus {
  outline: 0;
  border: 3px solid #A63E26;
}

.c3 {
  border-radius: 100px;
  width: 45px;
  height: 45px;
  display: block;
}

<div
    class="c0"
  >
    <a
      href="/"
    >
      <svg
        aria-label="Go Back"
        style="fill: #4b5c6b; width: 20px; height: 20px; float: left; margin-top: 2px;"
        version="1.1"
        viewBox="0 0 199.404 199.404"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <polygon
            points="135.412,0 35.709,99.702 135.412,199.404 163.695,171.119 92.277,99.702 163.695,28.285 	"
          />
        </g>
      </svg>
    </a>
    <h1
      class="c1"
    >
      Test Header
    </h1>
    <button
      class="c2"
    >
      <img
        alt="Account Options"
        class="c3"
        src="/some-image.png"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`should render with theme and passed props and with no back button 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #dfe7ed;
  padding: 10px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 1.2em;
  font-weight: normal;
  color: #4b5c6b;
}

.c2 {
  background: 0;
  border: 0;
  padding: 0;
  border: 3px solid #c7d2db;
  border-radius: 100px;
}

.c2:focus {
  outline: 0;
  border: 3px solid #A63E26;
}

.c3 {
  border-radius: 100px;
  width: 45px;
  height: 45px;
  display: block;
}

<div
    class="c0"
  >
    <h1
      class="c1"
    >
      Test Header
    </h1>
    <button
      class="c2"
    >
      <img
        alt="Account Options"
        class="c3"
        src="/some-image.png"
      />
    </button>
  </div>
</DocumentFragment>
`;
